name to karl wilson

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
         <meta charset="utf-8">
-        <title> John Tagliaferro's Main Page </title>
+        <title> Karl Wilson's Main Page </title>
 </head>
 <body>
         <div>
-                <h1>John Tagliaferro</h1>
+                <h1>Karl Wilson</h1>
         </div>
 
 </body>
