--- a/resume.html
+++ b/resume.html
@@ -2,11 +2,11 @@
 <html>
 <head>
         <meta charset="utf-8">
-        <title> John Tagliaferro's Resusme </title>
+        <title> Karl Wilson's Resusme </title>
 </head>
 <body>
         <div>
-                <h1>John Tagliaferro's Resume</h1>
+                <h1>Karl Wilson's Resume</h1>
         </div>
         <p>I am educated.</p>
         <p>I have worked in a couple places</p>
