added picture of me to repo and updated index to include the image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <div>
                 <h1>Karl Wilson</h1>
         </div>
-
+        <div>
+                <img src="me.jpg" alt="Picture of me (Karl Wilson)"></img>
+        </div>
+        <p> <a href="resume.html"> My Resume </a> </p>
+        <p> <a href="bio.html"> My bio </a> </p>
 </body>
 </html>
