preliminary resume file committed

--- a/resume.html
+++ b/resume.html
@@ -8,10 +8,25 @@
         <div>
                 <h1>Karl Wilson's Resume</h1>
         </div>
-        <p>I am educated.</p>
-        <p>I have worked in a couple places</p>
-        <p>I know Malboge and that is it</p>
-        <p>I once did some activities related to my field of study</p>
+        <h3> Education </h3>
+        <h5> Tufts University - School of Engineering </h5>
+        <p> Bachelor of Science in Computer Science </p>
+
+        <h3> Work Experience  </h3>
+        <h5> Tufts Dining Service - Kosher Deli </h5>
+        <p> Line Cook - September 2016 - December 2017</p>
+        <ul>
+                <li> Prepared food and worked the register </li>
+                <li> Developed communication and customer relations skills</li>
+        </ul>
+        <h3> Skills </h3>
+        <p> Programming Languages: C, C++, Python, Java, Malboge </p>
+        <p> Midlevel Falco SSBM player </p>
+        <h3> Activities </h3>
+        <h5> Polyhack -- October 2017</h5>
+        <p> Made a jazz improvizer with a machine learning algorithm </p>
+        <h5> Tufts Make January 2018 - present</h5>
+        <p> Attend workshops and participate in projects </p>
 
 </body>
 </html>
