plugged css file into resume.html and updated the css file

--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,7 @@
 <html>
 <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="resume_style.css">
         <title> Karl Wilson's Resusme </title>
 </head>
 <body>
