--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 <h1>Karl Wilson</h1>
         </div>
         <div>
-                <img src="me.jpg" alt="Picture of me (Karl Wilson)"></img>
+                <img src="me.jpg" alt="Picture of me (Karl Wilson)">
         </div>
         <p> <a href="resume.html"> My Resume </a> </p>
         <p> <a href="bio.html"> My bio </a> </p>
